# SymCalc2

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  package.json  pnpm-lock.yaml  rust-toolchain.toml  uniffi.toml  vite.config.js
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/calc2/: ButtonGrid.kt  CalcButton.kt  Calculator.kt  HistoryItem.kt  InputButton.kt  MainActivity.kt  OperatorButton.kt
android/app/src/main/java/com/example/calc2/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/shared/: build.gradle
android/shared/src/androidTest/java/com/example/shared/: ExampleInstrumentedTest.kt
android/shared/src/test/java/com/example/shared/: ExampleUnitTest.kt
migrations/: 20231231012051_initial_schema.sql
src/: app.html  calc.rs  db.rs  error.rs  history_item.rs  lib.rs
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/migrations/: 20250213055039_nullable_solution.sql  20250213173032_symbol_table.sql
src-tauri/src/: commands.rs  db.rs  error.rs  history_item.rs  lib.rs  main.rs  symbols.rs  utils.rs
src/lib/: Button.svelte  ButtonGrid.svelte  HistoryRow.svelte  types.ts  utils.ts
src/lib/modal/: ActionButton.svelte  Modal.svelte
src/routes/: +layout.svelte  +page.svelte
