[package]
name = "calc2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "calc2"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"

[dependencies]
kalk = { version = "3.0.4", default-features = false }
thiserror = "1.0.51"
# uniffi = { version = "0.25.3", features = ["cli"] }
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = [
  "cli",
] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = [
  "build",
] }
