[package]
name = "calc2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "calc2"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"

[dependencies]
anyhow = "1.0.79"
async-std = "1.12.0"
kalk = { version = "3.0.4", default-features = false }
log = "0.4.20"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-async-std"] }
thiserror = "1.0.51"
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = [
  "cli",
] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", branch = "main", features = [
  "build",
] }
