[package]
name = "symcalc2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "symcalc2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kalk = { version = "3.2.1", default-features = false }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-async-std"] }
async-std = "1.13.0"
tauri-plugin-log = "2"
log = "0.4.25"
thiserror = "2.0.11"
regex = "1.11.1"
